Revert "Fixed title centering, members wrapping when hovered"
This reverts commit 44e9172bbc33ad7611ff1394f5c03b45ff9e6fea.

--- a/css/5212.css
+++ b/css/5212.css
@@ -1,8 +1,3 @@
-.members-container{
-   overflow-x: scroll;
-   white-space: nowrap;
-}
-
 .members-container>div {
    display:inline-block;
    vertical-align:top;
@@ -43,6 +38,7 @@
 
 .hovered{
    background-color: rgba(255, 255, 255, 0.8);
+
 }
 
 .header{
